Bug 169921 - "Exchange compatible invitation naming" option doesn't stay checked
Summary: "Exchange compatible invitation naming" option doesn't stay checked
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-27 11:03 UTC by Jose Couto
Modified: 2008-09-04 16:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jose Couto 2008-08-27 11:03:06 UTC
Version:           1.10.0 (using 4.1.00 (KDE 4.1.0), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.26-1-686

Go to Settings > Configure KMail > Misc > Groupware > Groupware Compatability & Legacy Options. Check "Exchange compatible invitation naming" and the other compatability options. Accept the dialog and open it again. The compatible invitation naming is not checked.

Regards.
Comment 1 Thomas McGuire 2008-09-04 16:00:40 UTC
SVN commit 853307 by tmcguire:

- Load the value for "exchange compatible initation naming" into the checkbox
- Get rid of some manual config writing/reading

BUG: 169921