- Load the value for "exchange compatible initation naming" into the checkbox - Get rid of some manual config writing/reading

BUG: 169921

svn path=/trunk/KDE/kdepim/; revision=853307